notice ui for suggest positition

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+<div class="notice">
+    <p class="noticeText">On a pas pu accéder à votre prosition vous avez une proposition par défaut !</p>
+</div>
+
     <div class="container">
         <div class="container-title">
             <h3>La Météo du Jour</h3>
